<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_layout_blur"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_layout_content_all">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_layout_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/icon_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:drawableTop="@drawable/icon_register"
                android:fontFamily="sans-serif"
                android:padding="40dp"
                android:text="@string/home_txt_register_new_company"
                android:textAlignment="center"
                android:textColor="@color/theme_color_slateGrey"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/icon_view_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_register"
                android:drawableTop="@drawable/icon_view_company"
                android:fontFamily="sans-serif"
                android:padding="40dp"
                android:text="@string/home_txt_view_company"
                android:textAlignment="center"
                android:textColor="@color/theme_color_slateGrey"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/icon_shortlist_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon_register"
                android:drawableTop="@drawable/icon_shortlist_student"
                android:fontFamily="sans-serif"
                android:padding="40dp"
                android:text="@string/home_txt_shortlist_students"
                android:textAlignment="center"
                android:textColor="@color/theme_color_slateGrey"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/icon_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon_view_company"
                android:layout_toRightOf="@id/icon_shortlist_student"
                android:drawableTop="@drawable/icon_statistics"
                android:fontFamily="sans-serif"
                android:padding="40dp"
                android:text="@string/activity_title_statistics"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="16dp" />
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/menu"
        app:backgroundTint="@color/theme_color_Green"
        app:layout_anchorGravity="bottom|end" />
    </RelativeLayout>
</RelativeLayout>

