<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/statistics_pieLayout">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_tabLayout"
            android:layout_alignParentLeft ="true"
            android:layout_alignParentRight ="true"
            android:background="@color/theme_color_Green"
            app:tabSelectedTextColor="@color/colorWhite"
            app:tabBackground="@color/theme_color_Green"
            />

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_ViewPager"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/statistics_barLayout"
          >

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/statistics_barchart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="@color/theme_color_Green"
            android:id="@+id/statistics_iconLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/student_icon"
                android:id="@+id/statistics_student_icon"
                android:text="@string/stats_students_stats"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/company_icon"
                android:id="@+id/statistics_company_icon"
                android:text="@string/stats_company_stats"
                android:textAlignment="center"
                android:fontFamily="sans-seif"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/bar_graph_icon"
                android:id="@+id/statistics_monthly_icon"
                android:text="@string/stats_monthly_stats"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/yearly_icon"
                android:id="@+id/statistics_yearly_icon"
                android:text="@string/stats_yearly_stats"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

    </FrameLayout>
</RelativeLayout>