<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/criteria_wrapper_Cgpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cgpa"
            android:fontFamily="sans-serif"
            android:focusableInTouchMode="true">
            <EditText
                android:id="@+id/criteria_cgpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:inputType="phone"
                android:fontFamily="sans-serif"
                android:hint="@string/cgpa"
                android:padding="26dp"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:maxLength="3"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/criteria_wrapper_Arrears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/arrears"
            android:fontFamily="sans-serif">
            <EditText
                android:id="@+id/criteria_arrears"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="@string/arrears"
                android:padding="26dp"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="phone"
                android:maxLength="2"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/criteria_wrapper_Xpercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/x_per"
            android:fontFamily="sans-serif">
            <EditText
                android:id="@+id/criteria_x_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="@string/x_per"
                android:maxLength="5"
                android:inputType="phone"
                android:padding="26dp"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/criteria_wrapper_Xiipercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xii_per"
            android:fontFamily="sans-serif">
            <EditText
                android:id="@+id/criteria_xii_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="@string/xii_per"
                android:inputType="phone"
                android:maxLength="5"
                android:padding="26dp"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/placed"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="12dp"
                />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/criteria_status"
                android:layout_weight="2"
                android:textOn="Consider"
                android:textOff="Ignore"
                android:textColor="@color/colorWhite"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/diploma"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="12dp"
                android:textAlignment="textStart"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/criteria_diploma"
                android:layout_weight="2"
                android:textOn="Consider"
                android:textOff="Ignore"
                android:textColor="@color/colorWhite"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                          />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
